<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_10"
    android:background="@drawable/background_plain_curved"
    android:padding="@dimen/margin_20"
    tools:context=".ui.LoginActivity">

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/button_default"
        android:text="Login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_password" />

    <CheckBox
        android:id="@+id/admin_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin account"
        android:textColor="@android:color/black"
        android:buttonTint="@color/app_default_color"
        app:layout_constraintStart_toStartOf="@+id/login_password_text_layout"
        app:layout_constraintTop_toTopOf="@+id/login_button" />

    <TextView
        android:id="@+id/login_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/welcome_started_app"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/login_welcome_text"
        app:layout_constraintTop_toBottomOf="@+id/login_welcome_text" />

    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/forgot_password"
        android:textColor="@color/app_default_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@+id/login_password_text_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_password_text_layout" />

    <TextView
        android:id="@+id/login_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/welcome_to_app"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/login_phone_text_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_phone_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/buy_button"
            android:ems="15"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/margin_10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_phone_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_start_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buy_button"
            android:ems="15"
            android:hint="Phone number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/margin_10" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>